미니프로젝트ver.2

--- a/python-mini-project 1v3.ipynb
+++ b/python-mini-project 1v3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "metadata": {
     "scrolled": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
@@ -281,17 +281,25 @@
     "          \n",
     "db.commit()    \n",
     "db.close()\n",
-    "driver.close()"
+    "driver.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
+   "id": "badb3766",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good\n"
+     ]
+    }
+   ],
    "source": [
-    "# sql = ''' drop table test3; '''\n",
-    "# cursor.execute(sql)"
+    "print('good')"
    ]
   }
  ],
